# meteor

./: .gitattributes  .gitignore  LICENSE  README.md  diffmaps.html  index.html  io.html  iterative.html  pyproject.toml  rsmap.html  scale.html  settings.html  setup.py  sfcalc.html  test.txt  testing.html  tox.ini  tv.html  utils.html  validate.html
.github/workflows/: ci.yaml  ci.yml  cicd.yml  cron.yml  deploy.yml  docs.yml  examples.yml  lint.yml  lint_and_pyversions.yml  mypy.yml  pytest.yml  python-starter.yml  ruff.yml  test-github-actions.yml  tests.yml
examples/: customized_meteor_diffmap.ipynb
meteor/: __init__.py  classes.py  diffmaps.py  documentation.md  dsutils.py  io.py  iterative.py  kweighting.py  map_utils.py  maps.py  mask.py  meteor.py  meteor_io.py  rsmap.py  scale.py  settings.py  sfcalc.py  testing.py  tv.py  utils.py  validate.py
meteor.egg-info/: PKG-INFO  SOURCES.txt
meteor/TV_filtering/: iterative_tv.py  tv_denoise_map.py
meteor/background_subtraction/: make_Nbgmax_map.py  make_diffmap.py  screen_alphas_maps.py
meteor/scripts/: __init__.py  common.py  compute_difference_map.py  compute_iterative_tv_map.py  compute_iterativetv_difference_map.py  compute_tvdenoised_difference_map.py  make_Nbgmax_map.py  test_diffmaps.py  tv_denoise_map.py
scripts/: common.html  compute_difference_map.html  compute_iterative_tv_map.html  index.html
test/: conftest.py  test_dsutils.py  test_io.py
test/data/: 8a6g-chromophore-removed.cif  README.md  scaled-test-data.mtz
test/functional/: test_compute_difference_map.py  test_compute_iterative_tv.py  test_compute_iterative_tv_map.py  test_scale.py  test_scripts.py
test/unit/: conftest.py  test_diffmaps.py  test_io.py  test_iterative.py  test_map_utils.py  test_rsmap.py  test_scale.py  test_sfcalc.py  test_testing.py  test_tv.py  test_utils.py  test_validate.py
test/unit/scripts/: conftest.py  test_common.py  test_compute_difference_map.py  test_compute_iterative_tv_map.py
