[project]
name = "meteor"
description = "denoise crystallographic difference maps"
version = "0.2.0"
authors = [
    { name = "Alisia Fadini", email = "af840@cam.ac.uk" },
    { name = "Thomas Lane", email = "thomas.lane@desy.de" }
]
dependencies = [
    "numpy",
    "scipy",
    "gemmi",
    "scikit-image",
    "reciprocalspaceship",
    "pytest",
    "pytest-cov",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
[[tool.mypy.overrides]]
module = "reciprocalspaceship.*,gemmi.*,scipy.*,skimage.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
lint.flake8-pytest-style.fixture-parentheses = false
lint.select = [
    "ALL", # include all the rules, including new ones
]
lint.ignore = [
    #### modules
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    "C90", # mccabe complexity
    "DJ",  # django
    "EXE", # flake8-executable
    "T10", # debugger
    "TID", # flake8-tidy-imports

    #### specific rules
    "D100",   # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",
    "E402",   # false positives for local imports
    "E501",   # line too long
    "TRY003", # external messages in exceptions are too verbose
    "TD002",
    "TD003",
    "FIX002", # too verbose descriptions of todos
    "ISC001",
]
exclude = [
    "build/",
    "dist/",
    "migrations/",
    ".venv/",
    ".git/",
    "__pycache__/",
    "*.pyc",
]

[tool.ruff.lint.extend-per-file-ignores]
"test/**/*.py" = [
    "S101",     # asserts allowed in tests
    "ARG",      # unused function args -> fixtures
    "PLR2004",  # magic value used in comparison
    "FBT001",   # allow positional bools as function args
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
addopts = "--cov=meteor --cov-report=xml"
